chore: update package names and versions for agent-tars modules, add .tgz to .gitignore

--- a/multimodal/agent-tars/cli/package.json
+++ b/multimodal/agent-tars/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@agent-tars/cli",
-  "version": "0.3.0",
+  "name": "@freelw/agent-tars-cli",
+  "version": "0.3.23",
   "description": "CLI for Agent TARS.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -27,12 +27,13 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@tarko/agent-cli": "workspace:*",
-    "@agent-tars/core": "workspace:*"
+    "@tarko/agent-cli": "0.3.0",
+    "@agent-tars/interface": "0.3.0",
+    "@freelw/agent-tars-core": "0.3.21"
   },
   "devDependencies": {
     "@rslib/core": "0.10.0",
-    "@agent-tars/interface": "workspace:*",
+    "@freelw/agent-tars-core": "0.3.21",
     "@types/node": "^20.14.8",
     "typescript": "^5.7.2",
     "rimraf": "^6.0.1"
